# mybibliotheca

./: .gitignore  Dockerfile  KUZU_MIGRATION.md  config.py  docker-compose.dev.yml  docker-compose.yml  fix_db_session.py  fix_query_syntax.py  kuzu_config.py  migrate_to_kuzu.py  migrate_to_kuzu.sh  pyproject.toml  requirements.txt  setup_kuzu_migration.sh
app/: __init__.py  __init__.py.backup  admin.py  auth.py  db_adapter.py  forms.py  graph_models.py  models.py.backup  routes.py  utils.py
docs/: MIGRATION_FROM_SQL.md  VENV_MIGRATION_GUIDE.md
